@@ -194,6 +194,7 @@ public class DistributedFileSystem extends FileSystem {
   /** {@inheritDoc} */
   public void close() throws IOException {
     try {
+      super.processDeleteOnExit();
       dfs.close();
     } finally {
       super.close();
